@@ -2,7 +2,8 @@ FROM openjdk:8-jdk-alpine
 
 EXPOSE 8080
 
-ARG JAR_FILE=target/github-actions-gke-0.0.1-SNAPSHOT.jar
-ADD ${JAR_FILE} app.jar
+RUN mkdir /app
 
-ENTRYPOINT exec java -jar /app.jar
+COPY build/libs/*.jar /app/spring-boot-application.jar
+
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
